# rocket-pastebin

./: .env  .gitignore  Cargo.toml  README.md
migrations/20170424092245_users/: up.sql
migrations/20170427095655_paste/: up.sql
migrations/20170508070442_user_roles/: down.sql  up.sql
src/: main.rs  paste_id.rs  rustfmt.toml
src/controllers/: auth.rs  macros.rs  mod.rs  paste.rs  user.rs
src/helpers/: db.rs  digest.rs  env.rs  error.rs  guard.rs  mod.rs
src/models/: mod.rs  paste.rs  pastes.rs  user.rs  users.rs
src/services/: auth.rs  mod.rs  paste.rs  pastes.rs  user.rs  users.rs
src/tests/: auth.rs  helpers.rs  mod.rs  paste.rs  user.rs
