[package]
name = "rocket-pastebin"
version = "0.1.0"
authors = ["net-zero <net-zero@users.noreplay.github.com>"]

[dependencies]
rocket = "0.2.6"
rocket_codegen = "0.2.6"
rand = "0.3"
diesel = { version = "0.12.0", features = ["postgres"] }
diesel_codegen = { version = "0.12.0", features = ["postgres"] }
dotenv = "0.10.0"
r2d2 = "0.7.2"
r2d2-diesel = "0.12.0"
lazy_static = "0.2.8"
ring = "0.7.5"

[dev-dependencies]
rocket = { version = "0.2.6", features = ["testing"] }
