[package]
name = "rocket-pastebin"
version = "0.1.0"
authors = ["net-zero <net-zero@users.noreplay.github.com>"]

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "30fac32" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "30fac32" }
rand = "0.3"
diesel = { version = "0.12.0", features = ["postgres"] }
diesel_codegen = { version = "0.12.0", features = ["postgres"] }
dotenv = "0.10.0"
r2d2 = "0.7.2"
r2d2-diesel = "0.12.0"
lazy_static = "0.2.8"
ring = "0.7.5"
jsonwebtoken = "2.0.0"
serde = "1.0.2"
serde_derive = "1.0.2"
serde_json = "1.0.1"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
rev = "30fac32"
default-features = false
features = ["json"]

[dev-dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "30fac32" }
